--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  carroarmato0
 # Build settings
 markdown: kramdown
 theme: minima
-gems:
+plugins:
   - jekyll-feed
 exclude:
   - Gemfile
