--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Carroarmato0
-email: carroarmato0@gmail.com
+email: carroarmato0+blog@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Just a personal blog.
 baseurl: "" # the subpath of your site, e.g. /blog
